# belajar_django_modular

./: .gitignore  default.nix  dump.rdb  pyproject.toml
src/django_modular/: settings.py  urls.py
