[project]
name = "belajar_django_modular"
version = "0.1.0"
description = "Belajar jango Modular"
authors = [
    {name = "Taufik Herjanto", email = "taufik.herjanto@live.com"},
]
dependencies = [
    "django>=5.0.6",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
